skeplib/tests/fixtures/resolver/invalid/cycle_two/a.sk
import b;

fn fa() -> Int {
  return 1;
}
